I added an authentication feature but still incomplete

--- a/src/chat/utils/ChatStyle.css
+++ b/src/chat/utils/ChatStyle.css
@@ -104,6 +104,12 @@ textarea{
 .re-collapse{
     animation: RE_COLLAPSE 1s ease-in-out forwards;
 }
+
+/* Authetication style */
+.submit_btn:hover{
+    scale: 1.10;
+    cursor: pointer;
+}
 @keyframes POP-RIGHT{
     0%{
         -webkit-transform: translateX(0);
